--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,18 +1,5 @@
-# Node modules
-node_modules/
-dist
-dist-ssr
-*.local
-
-# Build output
-dist/
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
 # Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -20,8 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Vite cache
-.vite/
+node_modules
+dist
+dist-ssr
+*.local
 
 # Editor directories and files
 .vscode/*
@@ -33,4 +22,3 @@ lerna-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
